--- a/Gui/Language/English/inventoryDescriptions.json
+++ b/Gui/Language/English/inventoryDescriptions.json
@@ -2008,5 +2008,9 @@
 	"0229f59d-1ba3-446a-8f9c-df8b0f816e51": {
 		"description": " Mountable Spudgun that does not require ammo. ",
 		"title": "Creative Mountable Spudgun "
+	},
+	"a6ec1dcc-07e9-418a-819e-904e28a32f63": {
+		"description": " Sometimes you have to flex. ",
+		"title": "Mug "
 	}
 }
